--- a/sample.html
+++ b/sample.html
@@ -1,5 +1,5 @@
 <html>
-<head>Hello world!</head><br>
-<body>Welcome to the K.K.Wagh college</body> 
+<body>Welcome to the K.K.Wagh college
+</body> 
 </html>
 
